homepage fixes - added spacing for mobile on logos and featured industries

--- a/fls_2019/assets/src/sass/partials/_home.scss
+++ b/fls_2019/assets/src/sass/partials/_home.scss
@@ -124,6 +124,12 @@ html {
 												}
 											}
 										}
+										@media(max-width: 786px) {	
+											border-bottom: 5px solid $alternate;
+											&:nth-of-type(odd) {
+												border-right: 5px solid $alternate;
+											}
+										}
 									}									
 								}
 							}							
@@ -136,6 +142,18 @@ html {
 						.carousel-inner {
 							margin-top:2rem;
 							margin-bottom:2rem;
+						}
+					}
+					&#home_clients {
+						div {
+							&.item {
+								@media(max-width: 786px) {	
+									border-bottom: 5px solid $alternate;
+									&:nth-of-type(odd) {
+										border-right: 5px solid $alternate;
+									}
+								}								
+							}
 						}
 					}
 				}
